--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@ main{
                 </ul>
             </nav>
             <div class="nav-icon-container">
-                <img src="/images/cart.png">
-                <img src="/images/menu.png" class="menu-button">
+                <img src="images/cart.png">
+                <img src="images/menu.png" class="menu-button">
             </div>
         </div>
     </div>
@@ -508,7 +508,7 @@ main{
                     <button>Seja eficaz &#8594;</button>
                 </div>
                 <div class="header-buttom-side-right">
-                    <img src="/images/gaming-msi-header.png" alt="" />
+                    <img src="images/gaming-msi-header.png" alt="" />
                 </div>
             </div>
         </div>
