--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 </ul>
             </nav>
             <div class="nav-icon-container">
-                <img src="/images/cart.png">
-                <img src="/images/menu.png" class="menu-button">
+                <img src="cart.png">
+                <img src="menu.png" class="menu-button">
             </div>
         </div>
     </div>
@@ -41,7 +41,7 @@
                     <button>Seja eficaz &#8594;</button>
                 </div>
                 <div class="header-buttom-side-right">
-                    <img src="/images/gaming-msi-header.png" alt="" />
+                    <img src="gaming-msi-header.png" alt="" />
                 </div>
             </div>
         </div>
@@ -52,9 +52,9 @@
         <div class="gray-background">
             <div class="page-inner-content">
                 <div class="cols cols-3">
-                    <img src="/images/products/product-1.png" alt="" />
-                    <img src="/images/products/product-2.png" alt="" />
-                    <img src="/images/products/product-3.png" alt="" />
+                    <img src="product-1.png" alt="" />
+                    <img src="product-2.png" alt="" />
+                    <img src="product-3.png" alt="" />
                 </div>
             </div>
         </div>
@@ -65,25 +65,25 @@
                 <div class="subtitle-underline"></div>
                 <div class="cols cols-4">
                     <div class="product">
-                        <img src="images/products/product-4.png" alt=""/>
+                        <img src="product-4.png" alt=""/>
                         <p class="product-name">Combo Gamer Meetion</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                         <p class="product-price"><span>R$</span>570,00</p>
                     </div>
                     <div class="product">
-                        <img src="images/products/product-5.png" alt=""/>
+                        <img src="product-5.png" alt=""/>
                         <p class="product-name">Placa de vídeo MSI</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
                         <p class="product-price"><span>R$</span>1.299,00</p>
                     </div>
                     <div class="product">
-                        <img src="images/products/product-6.png" alt=""/>
+                        <img src="product-6.png" alt=""/>
                         <p class="product-name">Controle de Playstation 5 - ORIGINAL</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                         <p class="product-price"><span>R$</span>400,00</p>
                     </div>
                     <div class="product">
-                        <img src="images/products/product-7.png" alt=""/>
+                        <img src="product-7.png" alt=""/>
                         <p class="product-name">Cadeira Gamer Ninja Edition - Vermelha</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
                         <p class="product-price"><span>R$</span>980,00</p>
@@ -95,31 +95,31 @@
                 <div class="subtitle-underline"></div>
                 <div class="cols cols-4">
                     <div class="product">
-                        <img src="images/products/product-8.png" alt=""/>
+                        <img src="product-8.png" alt=""/>
                         <p class="product-name">iPhone 15 Pro Max</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                         <p class="product-price"><span>R$</span>8.999,00</p>
                     </div>
                     <div class="product">
-                        <img src="images/products/product-9.png" alt=""/>
+                        <img src="product-9.png" alt=""/>
                         <p class="product-name">Galaxy S23 Ultra</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
                         <p class="product-price"><span>R$</span>6.899,00</p>
                     </div>
                     <div class="product">
-                        <img src="images/products/product-10.png" alt=""/>
+                        <img src="product-10.png" alt=""/>
                         <p class="product-name">Celular Gamer</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                         <p class="product-price"><span>R$</span>5.000,00</p>
                     </div>
                     <div class="product">
-                        <img src="images/products/product-11.png" alt=""/>
+                        <img src="product-11.png" alt=""/>
                         <p class="product-name">Celular Xiaomi - Fotografia</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
                         <p class="product-price"><span>R$</span>2.899,00</p>
                     </div>
                     <div class="product">
-                        <img src="images/products/product-12.png" alt=""/>
+                        <img src="product-12.png" alt=""/>
                         <p class="product-name">Xbox Series X</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                         <p class="product-price"><span>R$</span>5.700,00</p>
@@ -131,13 +131,13 @@
                         <p class="product-price"><span>R$</span>3.000,00</p>
                     </div>
                     <div class="product">
-                        <img src="images/products/product-14.png" alt=""/>
+                        <img src="product-14.png" alt=""/>
                         <p class="product-name">Playstation 5 + Controle- ORIGINAL</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9734;</p>
                         <p class="product-price"><span>R$</span>4.000,00</p>
                     </div>
                     <div class="product">
-                        <img src="images/products/product-15.png" alt=""/>
+                        <img src="product-15.png" alt=""/>
                         <p class="product-name">Computador Gamer Aorus</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
                         <p class="product-price"><span>R$</span>9.899,00</p>
@@ -156,7 +156,7 @@
                         <button>Compre agora! &#8594;</button>
                     </div>
                     <div class="header-buttom-side-right">
-                        <img src="/images/exclusive.png" alt="" />
+                        <img src="exclusive.png" alt="" />
                     </div>
                 </div>
             </div>
@@ -202,8 +202,8 @@
                 <p>Baixe nossa aplicação</p>
                 <p>Baixe nossa aplicação para Andoid e iOS</p>
                 <div>
-                    <img src="images/app-store.png" alt="">
-                    <img src="images/play-store.png" alt="">
+                    <img src="app-store.png" alt="">
+                    <img src="play-store.png" alt="">
                 </div>
             </div>
             <div class="logo-footer">
