--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <p class="product-price"><span>R$</span>5.700,00</p>
                     </div>
                     <div class="product">
-                        <img src="images/products/product-13.png" alt=""/>
+                        <img src="product-13.png" alt=""/>
                         <p class="product-name">Volante com pedais - Ferrari</p>
                         <p class="rate">&#9733;&#9733;&#9733;&#9733;&#9733;</p>
                         <p class="product-price"><span>R$</span>3.000,00</p>
